<resources>
    <string name="app_name">lightPAY</string>
    <string name="register">Register</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_to_lightpay">Register to LightPAY</string>
    <string name="login">Login</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send_a_one_time_password_to_your_mobile_number_that_you_have_provided">We will send a One Time Password to your Mobile Number that you have provided</string>
    <string name="_071234567890">071234567890</string>
    <string name="_254">+254</string>
    <string name="enter_your_mobile_number">Enter your Mobile Number</string>
    <string name="_1234567890">1234567890</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_otp_send_to">Enter OTP send to</string>
    <string name="verify_your_account">Verify your Account</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify">VERIFY</string>
    <string name="default_web_client_id" />
    <string name="enter_your_email_address">Enter your Email Address</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="lightpay">LightPAY</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="login_to_lightpay">Login to LightPAY</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="transact">Transact</string>
    <string name="withdraw">Withdraw</string>
    <string name="deposit">Deposit</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="pay_bills">Pay Bills</string>
    <string name="my_accounts">My Accounts</string>
    <string name="history">History</string>
    <string name="manage_history">Manage History</string>
    <string name="accounts_fragment">Accounts Fragment</string>
    <string name="deposit_fragment">Deposit Fragment</string>
    <string name="history_fragment">History Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="payment_fragment">Payment Fragment</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="share_fragment">Share Fragment</string>
    <string name="support_fragment">Support Fragment</string>
    <string name="transact_fragment">Transact Fragment</string>
    <string name="withdraw_fragment">Withdraw Fragment</string>
    <string name="notification">Notification</string>
    <string name="you_are_about_to_logout_of_lightpay_app_if_you_are_certain_about_the_action_press_the_logout_button_below">You are about to logout of lightPAY app,if you are certain about the action,press the logout button below</string>
    <string name="emmanuel_esibitar">Emmanuel Esibitar</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notification_ring">Notification</string>
    <string name="notification_setting">Notification Setting</string>
    <string name="adjust_text">Adjust Text</string>
    <string name="change_language">Change Language</string>
    <string name="send_us_message">Send Us Message</string>
    <string name="home1">Home</string>
    <string name="account">Account</string>
    <string name="dashboard">Dashboard</string>
    <string name="reset_password">Reset Password</string>
    <string name="pay">Pay</string>
    <string name="login_using_google">Login using Google</string>
    <string name="welcome_to_lightpay">Welcome to lightPAY</string>
    <string name="lightpay_is_a_faster_means_of_payment_that_is_easier_to_use_for_transaction_that_involve_larger_sums_of_money_in_a_simple_and_faster_way_possible_saving_you_time_and_energy">lightPAY is a faster means of payment that is easier to use for transaction that involve larger sums of money in a simple and faster way possible saving you time and energy</string>
    <string name="transact_now">Transact now!</string>
    <string name="fast_services">Fast Services</string>
    <string name="choose_a_payment_method">Choose a Payment Method</string>
    <string name="disclaimer">DISCLAIMER!!</string>
    <string name="airtel_money">Airtel Money</string>
    <string name="bank_deposit">Bank Deposit</string>
    <string name="select_payment_method_below">Select Payment Method below</string>
    <string name="lipanampesa">LipaNaMpesa</string>
    <string name="pay_with_paybill">Pay with PayBill</string>
    <string name="important_notice">IMPORTANT NOTICE !!!!</string>
    <string name="capture_check">Capture Check</string>
    <string name="deposit_check">Deposit Check</string>
    <string name="choose_a_method_for_withdrawal">Choose a method for Withdrawal</string>
    <string name="withdraw_with_mpesa">Withdraw with Mpesa</string>
    <string name="withdrw_to_a_bank_account">Withdrw to a Bank Account</string>
    <string name="withdraw_using_airtel_money">Withdraw using Airtel Money</string>
    <string name="withdrawal_notice">WITHDRAWAL NOTICE</string>
    <string name="search">search</string>
    <string name="search_transaction">Search Transaction</string>
    <string name="lightpay_user">lightPAY User</string>
    <string name="coming_soon">coming soon</string>
    <string name="send_cash">Send Cash</string>
    <string name="send_money">Send Money</string>
    <string name="choose_a_send_money_method_to_continue">Choose a send money method to continue</string>
    <string name="send_money_notice">SEND MONEY NOTICE!!</string>
    <string name="user_email_id">User Email ID:</string>
    <string name="deposit_cash">Deposit Cash</string>
    <string name="username">Username</string>
    <string name="pay_bill">Pay Bill</string>
    <string name="withdraw_cash">Withdraw Cash</string>
    <string name="email">Email</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="send">Send</string>
    <string name="message_here">Message here</string>
    <string name="message_body">Message Body:</string>
    <string name="android_version_1_0_0">Android Version：1.0.0</string>
    <string name="about_us">About US</string>
    <string name="lightpay_is_a_faster_means_of_payment_that_offers_a_top_notch_security_measures_offering_a_secure_channel_for_transactions_worldwide">LightPAY is a faster means of payment that offers a top-notch security measures,offering a secure channel for transactions worldwide</string>
    <string name="upload_profile">Upload Profile</string>
    <string name="light_mode_settings">Light Mode Settings</string>
</resources>