<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home1"
            android:icon="@drawable/home"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_deposit"
            android:icon="@drawable/deposit"
            android:title="@string/deposit"/>
        <item
            android:id="@+id/nav_pay"
            android:icon="@drawable/tran"
            android:title="@string/pay_bills"/>
        <item
            android:id="@+id/nav_withdraw"
            android:icon="@drawable/withdraw"
            android:title="@string/withdraw"/>
        <item
            android:id="@+id/nav_transfer1"
            android:icon="@drawable/transfer"
            android:title="@string/send_cash"/>
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/wallet"
            android:title="Deposit Check"/>

    </group>
    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/settings"
                android:title="@string/settings"/>
            <item
                android:id="@+id/nav_aboutInfo"
                android:icon="@drawable/info"
                android:title="@string/about"/>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/share"
                android:title="@string/share"/>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/logout"/>
        </menu>
    </item>
    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_support"
                android:icon="@drawable/chat"
                android:title="Support"/>
        </menu>

    </item>

</menu>