<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login"
    tools:context=".TransactFragment">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:text="@string/send_money"
        android:textSize="40sp"
        android:textStyle="bold"
        android:padding="16dp" />
    <TextView
        android:id="@+id/titleTextView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:text="@string/choose_a_send_money_method_to_continue"
        android:textSize="26sp"
        android:textStyle="bold"
        android:padding="16dp" />

    <LinearLayout
        android:id="@+id/paymentButtonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="90dp"
        android:gravity="center_horizontal"
        android:layout_below="@id/titleTextView">

        <ImageButton
            android:id="@+id/SendMpesaCardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pesa"
            android:background="@color/login"
            android:padding="15dp"
            android:contentDescription="mpesa"/>

        <ImageButton
            android:id="@+id/sendDebitCardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@color/login"
            android:padding="20dp"
            android:src="@drawable/ic_debit"
            android:contentDescription="@string/bank_deposit"/>
        <ImageButton
            android:id="@+id/sendAirtelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@color/login"
            android:padding="20dp"
            android:src="@drawable/wallet"
            android:contentDescription="@string/airtel_money"/>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="300dp"
        android:padding="10dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_money_notice"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:background="@color/off_white"/>
    </RelativeLayout>
</RelativeLayout>